--- a/public/stylesheets/screeningroom.css
+++ b/public/stylesheets/screeningroom.css
@@ -46,6 +46,9 @@
 	border: outset 2px #520303;
 	border-radius:3px;
 	box-shadow: 0 0 10px #11891c;
+	font-size: 16px;
+	display: block;
+	font-weight: bold;
 }
 
 .exit-room:hover, .new-room:hover {
@@ -102,6 +105,9 @@
 }
 
 .list-view li {
+	height: 60px;
+	overflow: hidden;
+	font-size: 13px;
 	cursor: pointer;
 	border-bottom: 1px solid #000;
 	background-image: -webkit-gradient(
