--- a/public/stylesheets/screeningroom.css
+++ b/public/stylesheets/screeningroom.css
@@ -46,7 +46,7 @@
 	border: outset 2px #520303;
 	border-radius:3px;
 	box-shadow: 0 0 10px #11891c;
-	font-size: 16px;
+	font-size: 20px;
 	display: block;
 	font-weight: bold;
 }
@@ -147,6 +147,7 @@
 	font-weight: bold;
 	float: left;
 	padding: 5px;
+	width:100px;
 }
 
 .clear {
