--- a/public/stylesheets/screeningroom.css
+++ b/public/stylesheets/screeningroom.css
@@ -209,7 +209,7 @@
 .queue-bar {
 	width: 100%;
 	position: absolute;
-	bottom: -140px;
+	bottom: 0;
 	z-index: 100;
 	height: 140px;
 	border-top: 2px solid #ededed;
