--- a/public/stylesheets/screeningroom.css
+++ b/public/stylesheets/screeningroom.css
@@ -362,11 +362,14 @@
 	background-color: #61c5f8;
 }
 
-
 .credits {
-    text-align: right;
-    color:#AAA;
-    padding-right:10px;
+    text-align: left;
+    color: #AAA;
+    padding-left: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-bottom: 10px;
 }
 .credits a{
     color:white;
